--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -6,21 +6,32 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.field_article_categories
     - field.field.node.article.field_article_type
+    - field.field.node.article.field_class
+    - field.field.node.article.field_colophon
+    - field.field.node.article.field_colophon_author
+    - field.field.node.article.field_colophon_editor
+    - field.field.node.article.field_colophon_photographer
     - field.field.node.article.field_description
+    - field.field.node.article.field_equipment
+    - field.field.node.article.field_factboxes
+    - field.field.node.article.field_graphics
     - field.field.node.article.field_header
     - field.field.node.article.field_list_date
     - field.field.node.article.field_list_media
+    - field.field.node.article.field_location
+    - field.field.node.article.field_media_downloads
+    - field.field.node.article.field_season
+    - field.field.node.article.field_subject
+    - field.field.node.article.field_teaching_goals
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
-    - datetime
-    - entity_reference_revisions
     - layout_builder
     - layout_builder_restrictions
     - user
 third_party_settings:
   layout_builder:
-    enabled: false
+    enabled: true
     allow_custom: false
   layout_builder_restrictions:
     allowed_block_categories: {  }
@@ -35,64 +46,29 @@ id: node.article.default
 targetEntityType: node
 bundle: article
 mode: default
-content:
-  field_article_categories:
-    type: entity_reference_label
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 8
-    region: content
-  field_article_type:
-    type: entity_reference_label
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 7
-    region: content
-  field_description:
-    type: basic_string
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
-  field_header:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    weight: 3
-    region: content
-  field_list_date:
-    type: datetime_time_ago
-    label: hidden
-    settings:
-      future_format: '@interval hence'
-      past_format: '@interval ago'
-      granularity: 2
-    third_party_settings: {  }
-    weight: 4
-    region: content
-  field_list_media:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 2
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 0
-    region: content
+content: {  }
 hidden:
   body: true
+  field_article_categories: true
+  field_article_type: true
+  field_class: true
+  field_colophon: true
+  field_colophon_author: true
+  field_colophon_editor: true
+  field_colophon_photographer: true
+  field_description: true
+  field_equipment: true
+  field_factboxes: true
+  field_graphics: true
+  field_header: true
+  field_list_date: true
+  field_list_media: true
+  field_location: true
+  field_media_downloads: true
+  field_season: true
+  field_subject: true
+  field_teaching_goals: true
   langcode: true
   layout_builder__layout: true
+  links: true
   search_api_excerpt: true
