--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -7,10 +7,23 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.field_article_categories
     - field.field.node.article.field_article_type
+    - field.field.node.article.field_class
+    - field.field.node.article.field_colophon
+    - field.field.node.article.field_colophon_author
+    - field.field.node.article.field_colophon_editor
+    - field.field.node.article.field_colophon_photographer
     - field.field.node.article.field_description
+    - field.field.node.article.field_equipment
+    - field.field.node.article.field_factboxes
+    - field.field.node.article.field_graphics
     - field.field.node.article.field_header
     - field.field.node.article.field_list_date
     - field.field.node.article.field_list_media
+    - field.field.node.article.field_location
+    - field.field.node.article.field_media_downloads
+    - field.field.node.article.field_season
+    - field.field.node.article.field_subject
+    - field.field.node.article.field_teaching_goals
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
@@ -98,8 +111,21 @@ hidden:
   body: true
   field_article_categories: true
   field_article_type: true
+  field_class: true
+  field_colophon: true
+  field_colophon_author: true
+  field_colophon_editor: true
+  field_colophon_photographer: true
   field_description: true
+  field_equipment: true
+  field_factboxes: true
+  field_graphics: true
   field_list_media: true
+  field_location: true
+  field_media_downloads: true
+  field_season: true
+  field_subject: true
+  field_teaching_goals: true
   langcode: true
   layout_builder__layout: true
   search_api_excerpt: true
