--- a/config/sync/field.field.node.article.field_description.yml
+++ b/config/sync/field.field.node.article.field_description.yml
@@ -11,7 +11,7 @@ id: node.article.field_description
 field_name: field_description
 entity_type: node
 bundle: article
-label: Beskrivelse
+label: 'Liste beskrivelse'
 description: ''
 required: true
 translatable: true
