--- a/config/sync/core.entity_form_display.paragraph.inline_hero.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.inline_hero.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.inline_hero.field_background
     - field.field.paragraph.inline_hero.field_cta
+    - field.field.paragraph.inline_hero.field_dynamic_height
     - field.field.paragraph.inline_hero.field_overlay
     - field.field.paragraph.inline_hero.field_text
     - field.field.paragraph.inline_hero.field_text_color
@@ -31,7 +32,7 @@ content:
     third_party_settings: {  }
   field_cta:
     type: styles_link_target
-    weight: 3
+    weight: 4
     region: content
     settings:
       placeholder_url: ''
@@ -39,9 +40,16 @@ content:
       style: ''
       target_blank: 0
     third_party_settings: {  }
-  field_overlay:
+  field_dynamic_height:
     type: boolean_checkbox
     weight: 2
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  field_overlay:
+    type: boolean_checkbox
+    weight: 3
     region: content
     settings:
       display_label: true
@@ -56,7 +64,7 @@ content:
     third_party_settings: {  }
   field_text_position:
     type: styles
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
