--- a/config/sync/core.entity_view_display.paragraph.basic_hero.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.basic_hero.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.basic_hero.field_background
     - field.field.paragraph.basic_hero.field_color_theme
     - field.field.paragraph.basic_hero.field_cta
+    - field.field.paragraph.basic_hero.field_dynamic_height
     - field.field.paragraph.basic_hero.field_link
     - field.field.paragraph.basic_hero.field_overlay
     - field.field.paragraph.basic_hero.field_text
@@ -49,6 +50,16 @@ content:
       target: ''
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_dynamic_height:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 5
     region: content
   field_text:
     type: text_default
