--- a/config/sync/core.entity_view_display.paragraph.inline_hero.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.inline_hero.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.inline_hero.field_background
     - field.field.paragraph.inline_hero.field_cta
+    - field.field.paragraph.inline_hero.field_dynamic_height
     - field.field.paragraph.inline_hero.field_overlay
     - field.field.paragraph.inline_hero.field_text
     - field.field.paragraph.inline_hero.field_text_color
@@ -41,6 +42,16 @@ content:
       target: ''
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_dynamic_height:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 5
     region: content
   field_overlay:
     type: boolean
