--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.key_value.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.key_value.yml
@@ -1,19 +1,16 @@
 color_themes:
   primary:
     name: Blue
-    color: '#263ed3'
-  secondary:
-    name: Gray
-    color: '#d1d1d1'
+    color: '#00687f'
   green:
     name: Green
-    color: '#1fc8a9'
-  red:
-    name: Red
-    color: '#ef3e4a'
-  seashell:
-    name: Seashell
-    color: '#ffefe5'
+    color: '#007950'
+  pink:
+    name: Pink
+    color: '#f2cbce'
+  sand:
+    name: Sand
+    color: '#ffe6a0'
   yellow:
     name: Yellow
-    color: '#f0cf61'
+    color: '#ffce42'
