--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -20,6 +20,7 @@ master:
     dist/components/js/search-overlay.js: {}
   dependencies:
     - sis/theme-primary
+    - sis/theme-green
 
 # Themes.
 theme:
