Added footer bottom region

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.info.yml
@@ -19,6 +19,7 @@ regions:
   pageheader: Pageheader
   breadcrumb: Breadcrumb
   content: Content
+  footerbottom: Footer bottom
   burgermenu: Burgermenu
 
 component-libraries:
