--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,7 @@
         "wikimedia/composer-merge-plugin": "^2.0"
     },
     "require-dev": {
-        "drupal/devel": "~4.0",
+        "drupal/devel": "^4.1",
         "kint-php/kint": "^3.3"
     },
     "conflict": {
