--- a/config/sync/core.entity_form_display.taxonomy_term.article_types.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.article_types.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.article_types.field_link_liste_headline
     - field.field.taxonomy_term.article_types.field_overview
     - taxonomy.vocabulary.article_types
   module:
@@ -22,6 +23,14 @@ content:
     region: content
     settings:
       rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_link_liste_headline:
+    type: string_textfield
+    weight: 7
+    region: content
+    settings:
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   field_overview:
