--- a/config/sync/core.entity_view_display.media.image.default.yml
+++ b/config/sync/core.entity_view_display.media.image.default.yml
@@ -5,10 +5,10 @@ dependencies:
   config:
     - field.field.media.image.field_media_category
     - field.field.media.image.field_media_image
-    - image.style.large
     - media.type.image
+    - responsive_image.styles.list_view
   module:
-    - image
+    - responsive_image
 _core:
   default_config_hash: d69bsUoZgPMKBwQa1UW1jIvszVcwhtCYcoMCsh75S4s
 id: media.image.default
@@ -17,11 +17,11 @@ bundle: image
 mode: default
 content:
   field_media_image:
-    type: image
+    type: responsive_image
     label: hidden
     settings:
+      responsive_image_style: list_view
       image_link: ''
-      image_style: large
     third_party_settings: {  }
     weight: 0
     region: content
