--- a/config/sync/core.entity_view_display.node.article.list.yml
+++ b/config/sync/core.entity_view_display.node.article.list.yml
@@ -48,21 +48,13 @@ targetEntityType: node
 bundle: article
 mode: list
 content:
-  field_article_type:
-    type: entity_reference_label
-    label: hidden
-    settings:
-      link: false
-    third_party_settings: {  }
-    weight: 2
-    region: content
   field_class:
     type: entity_reference_label
     label: hidden
     settings:
       link: false
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
   field_description:
     type: basic_string
@@ -86,11 +78,12 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 4
+    weight: 3
     region: content
 hidden:
   body: true
   field_article_categories: true
+  field_article_type: true
   field_colophon: true
   field_colophon_author: true
   field_colophon_editor: true
