--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "drupal/layout_builder_modal": "^1.0",
         "drupal/layout_builder_restrictions": "^2.0",
         "drupal/linkit": "^6.0.0-beta2",
+        "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.0",
         "drupal/noreferrer": "^1.0",
         "drupal/paragraphs": "^1.0",
@@ -103,7 +104,16 @@
             "php": "8.0"
         },
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": true,
+            "drupal/core-vendor-hardening": true,
+            "oomphinc/composer-installers-extender": true,
+            "wikimedia/composer-merge-plugin": true
+        }
     },
     "extra": {
         "drupal-scaffold": {
