--- a/config/sync/field.storage.block_content.field_articles_form.yml
+++ b/config/sync/field.storage.block_content.field_articles_form.yml
@@ -4,17 +4,17 @@ status: true
 dependencies:
   module:
     - block_content
-    - premium_articles
+    - entity_overview
 _core:
   default_config_hash: c_FTzPbJwq9oY6bBRwR7-0s7MmebWJPJ_S0FrqeLq-0
 id: block_content.field_articles_form
 field_name: field_articles_form
 entity_type: block_content
-type: article_filter
+type: overview_filter
 settings:
   entity_bundle: node.article
   allow_facets: 1
-module: premium_articles
+module: entity_overview
 locked: false
 cardinality: 1
 translatable: true
