--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -67,6 +67,7 @@ module:
   media: 0
   media_icons: 0
   media_library: 0
+  menu_item_extras: 0
   menu_link_content: 0
   menu_ui: 0
   metatag: 0
