--- a/config/sync/field.field.paragraph.inline_hero.field_text_position.yml
+++ b/config/sync/field.field.paragraph.inline_hero.field_text_position.yml
@@ -13,7 +13,7 @@ id: paragraph.inline_hero.field_text_position
 field_name: field_text_position
 entity_type: paragraph
 bundle: inline_hero
-label: 'Text position'
+label: 'Tekst position'
 description: ''
 required: true
 translatable: false
