SIS2-51: Added layout block

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/sis_almanac.services.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/sis_almanac.services.yml
@@ -1,3 +1,7 @@
 services:
   sis_almanac.repository:
     class: 'Drupal\sis_almanac\Repository\AlmanacRepository'
+  sis_almanac.service:
+    class: 'Drupal\sis_almanac\Services\AlmanacService'
+    arguments:
+      - '@datetime.time'
