--- a/config/sync/field.field.node.almanac.field_almanac_content.yml
+++ b/config/sync/field.field.node.almanac.field_almanac_content.yml
@@ -11,7 +11,7 @@ dependencies:
 third_party_settings:
   allowed_formats:
     allowed_formats:
-      - basic_html
+      - limited_html_link
 id: node.almanac.field_almanac_content
 field_name: field_almanac_content
 entity_type: node
