--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -5,12 +5,14 @@ dependencies:
   config:
     - core.entity_view_display.node.page.full
     - filter.format.full_html
+    - filter.format.limited_html_link
     - media.type.audio
     - media.type.document
     - media.type.image
     - media.type.remote_video
     - media.type.video
     - node.type.page
+    - workflows.workflow.editorial
   module:
     - atoms
     - content_moderation
@@ -138,6 +140,7 @@ permissions:
   - 'use editorial transition publish'
   - 'use media icons'
   - 'use text format full_html'
+  - 'use text format limited_html_link'
   - 'view all media revisions'
   - 'view all revisions'
   - 'view all scheduled transitions'
