SIS2-51: Added variable in hook_preprocess_page

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/sis_almanac.services.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/sis_almanac.services.yml
@@ -5,3 +5,8 @@ services:
     class: 'Drupal\sis_almanac\Services\AlmanacService'
     arguments:
       - '@datetime.time'
+  sis_almanac.content_delivery:
+    class: 'Drupal\sis_almanac\Services\AlmanacContentDeliveryService'
+    arguments:
+      - '@sis_almanac.repository'
+      - '@sis_almanac.service'
