SIS2-21: Added color themes dependencies to appetizer

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -219,6 +219,14 @@ appetiser:
   css:
     theme:
       dist/components/css/components/03-organisms/appetiser.css: {}
+  dependencies:
+    - sis/theme
+    - sis/theme-primary
+    - sis/theme-blue
+    - sis/theme-green
+    - sis/theme-pink
+    - sis/theme-purple
+    - sis/theme-yellow
 
 burger-menu:
   version: VERSION
