--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
@@ -3,3 +3,7 @@ description: Helper module for lexicon
 package: Skoven i Skolen
 type: module
 core_version_requirement: ^8 || ^9
+
+dependencies:
+  - taxonomy_machine_name
+  - premium_articles
