SIS2-199: Added lexicon overview block

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.routing.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.routing.yml
@@ -1,6 +1,13 @@
 sis_lexicon.get_articles:
-  path: sis/lexicon/get/{letter}
+  path: sis/lexicon/get/{letter}/{limit}/{page}
   defaults:
     _controller: 'Drupal\sis_lexicon\Controller\LexiconController::get'
+  requirements:
+    _access: 'TRUE'
+
+sis_lexicon.search_articles:
+  path: sis/lexicon/search
+  defaults:
+    _controller: 'Drupal\sis_lexicon\Controller\LexiconController::search'
   requirements:
     _access: 'TRUE'
