--- a/config/sync/field.field.block_content.lexicon_overview.body.yml
+++ b/config/sync/field.field.block_content.lexicon_overview.body.yml
@@ -1,16 +1,16 @@
-uuid: 91b8517e-2f57-456e-821e-8bfe4894da74
+uuid: 0a607c6a-edea-4c8b-a42d-5771ccaf995a
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.body
-    - node.type.leksikon
+    - block_content.type.lexicon_overview
+    - field.storage.block_content.body
   module:
     - text
-id: node.leksikon.body
+id: block_content.lexicon_overview.body
 field_name: body
-entity_type: node
-bundle: leksikon
+entity_type: block_content
+bundle: lexicon_overview
 label: Body
 description: ''
 required: false
@@ -18,6 +18,6 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
   required_summary: false
 field_type: text_with_summary
