--- a/config/sync/field.field.block_content.lexicon_overview.field_lexicon_overview.yml
+++ b/config/sync/field.field.block_content.lexicon_overview.field_lexicon_overview.yml
@@ -1,17 +1,17 @@
-  uuid: cbe22608-b216-48bd-b519-1eb78b14ea6d
+uuid: 836a81f1-7b1b-4390-adab-372b972bb82c
 langcode: da
 status: true
 dependencies:
   config:
-    - block_content.type.overview
-    - field.storage.block_content.field_overview
+    - block_content.type.lexicon_overview
+    - field.storage.block_content.field_lexicon_overview
   module:
     - entity_overview
-id: block_content.overview.field_overview
-field_name: field_overview
+id: block_content.lexicon_overview.field_lexicon_overview
+field_name: field_lexicon_overview
 entity_type: block_content
-bundle: overview
-label: Overview
+bundle: lexicon_overview
+label: 'Leksikon oversigt'
 description: ''
 required: false
 translatable: false
@@ -20,13 +20,12 @@ default_value:
     fields:
       field_article_categories: {  }
       field_article_type:
-        - '3'
-        - '4'
+        - '15'
       field_class: {  }
       field_location: {  }
       field_season: {  }
       field_subject: {  }
-    count: 5
+    count: 8
     sort: newest
     pagination: false
     facets: {  }
