SIS2-93: Styling and theming of lexicon teaser layout block

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -275,6 +275,12 @@ local-tasks:
     theme:
       dist/components/css/components/03-organisms/local-tasks.css: {}
 
+lexicon-teaser:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/03-organisms/lexicon-teaser.css: {}
+
 search-page:
   version: VERSION
   css:
