SIS2-93: Changes to lexicon blocks

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -275,11 +275,11 @@ local-tasks:
     theme:
       dist/components/css/components/03-organisms/local-tasks.css: {}
 
-lexicon-teaser:
+lexicon:
   version: VERSION
   css:
     theme:
-      dist/components/css/components/03-organisms/lexicon-teaser.css: {}
+      dist/components/css/components/03-organisms/lexicon.css: {}
 
 search-page:
   version: VERSION
