--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
@@ -7,3 +7,6 @@ core_version_requirement: ^8 || ^9
 dependencies:
   - taxonomy_machine_name
   - premium_articles
+
+interface translation project: sis_lexicon
+interface translation server pattern: modules/contrib/sis_lexicon/translations/%language.po
