SIS2-194: Added configs

--- a/config/sync/field.field.taxonomy_term.article_types.field_overview.yml
+++ b/config/sync/field.field.taxonomy_term.article_types.field_overview.yml
@@ -27,11 +27,10 @@ default_value:
       field_location: {  }
       field_season: {  }
       field_subject: {  }
-    count: 20
+    count: 16
     sort: newest
-    pagination: true
-    facets:
-      - sort
+    pagination: false
+    facets: {  }
 default_value_callback: ''
 settings: {  }
 field_type: article_filter
