SIS2-12: Added related articles markup, styling and swiper slide functionality

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -184,6 +184,15 @@ search-toggle:
   js:
     dist/components/js/search-toggle.js: {}
 
+related-articles:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/02-molecules/related-articles.css: {}
+      dist/components/js/related-articles.css: {}
+  js:
+    dist/components/js/related-articles.js: {}
+
 spacer:
   version: VERSION
   css:
