--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "bower-asset/spectrum": "^1.8",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
+        "drupal/address": "^1.10",
         "drupal/admin_toolbar": "^2.4",
         "drupal/adminimal_admin_toolbar": "^1.11",
         "drupal/adminimal_theme": "^1.6",
@@ -61,6 +62,7 @@
         "drupal/paragraphs": "^1.0",
         "drupal/paragraphs_asymmetric_translation_widgets": "^1.0@beta",
         "drupal/pathauto": "^1.0",
+        "drupal/profile": "^1.3",
         "drupal/promote_disable": "^2.0",
         "drupal/redirect": "^1.0",
         "drupal/redis": "^1.5",
