--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -2,6 +2,7 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 langcode: da
 module:
+  address: 0
   admin_toolbar: 0
   admin_toolbar_links_access_filter: 0
   adminimal_admin_toolbar: 0
@@ -39,6 +40,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   editor_advanced_link: 0
+  entity: 0
   entity_clone: 0
   entity_overview: 0
   entity_reference_revisions: 0
@@ -83,6 +85,7 @@ module:
   premium_search: 0
   premium_theme_helper: 0
   premium_tools: 0
+  profile: 0
   promote_disable: 0
   rdf: 0
   redirect: 0
@@ -105,6 +108,7 @@ module:
   system: 0
   taxonomy: 0
   taxonomy_machine_name: 0
+  telephone: 0
   text: 0
   token: 0
   toolbar: 0
