--- a/config/sync/views.view.files.yml
+++ b/config/sync/views.view.files.yml
@@ -471,11 +471,11 @@ display:
         options:
           submit_button: Filter
           reset_button: false
-          reset_button_label: Gendan
-          exposed_sorts_label: 'Sortér efter'
+          reset_button_label: Reset
+          exposed_sorts_label: 'Sort by'
           expose_sort_order: true
-          sort_asc_label: Stigende
-          sort_desc_label: Faldende
+          sort_asc_label: Asc
+          sort_desc_label: Desc
       access:
         type: perm
         options:
@@ -1017,7 +1017,7 @@ display:
           exception:
             value: all
             title_enable: false
-            title: Alle
+            title: All
           title_enable: true
           title: 'Information om brug af filen {{ arguments.fid }}'
           default_argument_type: fixed
