SIS2-10: Added profile dependencies to sis_overview module

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/sis_overview.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/sis_overview.info.yml
@@ -6,3 +6,6 @@ core_version_requirement: ^8 || ^9
 
 interface translation project: sis_overview
 interface translation server pattern: modules/contrib/sis_overview/translations/%language.po
+
+dependencies:
+  - profile
