SIS2-97: Styling and theming overview entity form

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -299,6 +299,12 @@ lexicon:
     theme:
       dist/components/css/components/03-organisms/lexicon.css: {}
 
+overview-form:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/03-organisms/overview-form.css: {}
+
 search-page:
   version: VERSION
   css:
