--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -23,16 +23,58 @@ dependencies:
     - field.field.node.article.field_season
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
+    - field.field.node.article.field_time
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
     - layout_builder
     - layout_builder_restrictions
+    - layout_discovery
     - user
 third_party_settings:
   layout_builder:
     enabled: true
     allow_custom: false
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: ''
+          column_widths: null
+          color_theme: none
+          column_spacing_top: medium
+          column_spacing_bottom: medium
+          column_show_graphic_top: medium
+          column_show_graphic_bottom: medium
+          column_width: normal
+        components:
+          46c9e775-ac98-445c-9357-dd45a80771cc:
+            uuid: 46c9e775-ac98-445c-9357-dd45a80771cc
+            region: content
+            configuration:
+              id: 'extra_field_block:node:article:content_moderation_control'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+            weight: 0
+            additional: {  }
+          53381bc9-e84c-459b-a4c3-6832b0698260:
+            uuid: 53381bc9-e84c-459b-a4c3-6832b0698260
+            region: content
+            configuration:
+              id: 'field_block:node:article:field_time'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: entity_reference_label
+                label: above
+                settings:
+                  link: true
+                third_party_settings: {  }
+            weight: 1
+            additional: {  }
+        third_party_settings: {  }
   layout_builder_restrictions:
     allowed_block_categories: {  }
     entity_view_mode_restriction:
@@ -46,7 +88,20 @@ id: node.article.default
 targetEntityType: node
 bundle: article
 mode: default
-content: {  }
+content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
+  field_time:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 1
+    region: content
 hidden:
   body: true
   field_article_categories: true
