--- a/config/sync/profile.type.organization.yml
+++ b/config/sync/profile.type.organization.yml
@@ -3,7 +3,7 @@ langcode: da
 status: true
 dependencies: {  }
 id: organization
-label: Organisation
+label: 'Grøn organisation'
 display_label: ''
 multiple: false
 registration: false
