--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         "drupal/redirect": "^1.0",
         "drupal/redis": "^1.5",
         "drupal/role_delegation": "^1.1",
+        "drupal/rules": "^3.0@alpha",
         "drupal/scheduled_transitions": "^2.0",
         "drupal/search_api": "^1.0",
         "drupal/search_api_exclude_entity": "^1.0",
@@ -76,6 +77,7 @@
         "drupal/view_unpublished": "^1.0",
         "drupal/webform": "^6.0",
         "drupal/webp": "^1.0.0-beta5",
+        "drupal/workbench_email": "^2.2",
         "drush/drush": "^10.0",
         "novicell/atoms": "^1.0",
         "novicell/content_hierarchy": "^1.0",
