--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_description
+    - field.field.node.page.field_graphics
     - field.field.node.page.field_header
     - field.field.node.page.field_hide_breadcrumb
     - field.field.node.page.field_hide_title
@@ -12,7 +13,6 @@ dependencies:
     - field.field.node.page.field_meta_tags
     - field.field.node.page.layout_builder__layout
     - node.type.page
-    - workflows.workflow.editorial
   module:
     - content_moderation
     - field_group
@@ -71,6 +71,16 @@ content:
     region: content
     settings:
       rows: 3
+      placeholder: ''
+    third_party_settings: {  }
+  field_graphics:
+    type: entity_reference_autocomplete
+    weight: 101
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
       placeholder: ''
     third_party_settings: {  }
   field_header:
