--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -24,6 +24,7 @@ dependencies:
     - field.field.node.article.field_season
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
+    - field.field.node.article.field_time
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
@@ -31,11 +32,36 @@ dependencies:
     - entity_reference_revisions
     - layout_builder
     - layout_builder_restrictions
+    - layout_discovery
     - user
 third_party_settings:
   layout_builder:
     enabled: true
     allow_custom: true
+    sections:
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: ''
+          column_widths: null
+          color_theme: none
+          column_spacing_top: medium
+          column_spacing_bottom: medium
+          column_show_graphic_top: medium
+          column_show_graphic_bottom: medium
+          column_width: normal
+        components:
+          a2133e6d-9227-4fda-911c-80a29a4f8a5b:
+            uuid: a2133e6d-9227-4fda-911c-80a29a4f8a5b
+            region: content
+            configuration:
+              id: 'extra_field_block:node:article:content_moderation_control'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+            weight: 0
+            additional: {  }
+        third_party_settings: {  }
   layout_builder_restrictions:
     allowed_block_categories:
       - 'Chaos Tools'
@@ -83,6 +109,11 @@ targetEntityType: node
 bundle: article
 mode: full
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   field_header:
     type: entity_reference_revisions_entity_view
     label: hidden
@@ -126,6 +157,7 @@ hidden:
   field_season: true
   field_subject: true
   field_teaching_goals: true
+  field_time: true
   langcode: true
   layout_builder__layout: true
   search_api_excerpt: true
