--- a/config/sync/core.entity_view_display.node.article.link_list.yml
+++ b/config/sync/core.entity_view_display.node.article.link_list.yml
@@ -24,6 +24,7 @@ dependencies:
     - field.field.node.article.field_season
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
+    - field.field.node.article.field_time
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
@@ -47,7 +48,12 @@ id: node.article.link_list
 targetEntityType: node
 bundle: article
 mode: link_list
-content: {  }
+content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
 hidden:
   body: true
   field_article_categories: true
@@ -69,6 +75,7 @@ hidden:
   field_season: true
   field_subject: true
   field_teaching_goals: true
+  field_time: true
   langcode: true
   layout_builder__layout: true
   links: true
