--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -24,6 +24,7 @@ dependencies:
     - field.field.node.article.field_season
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
+    - field.field.node.article.field_time
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
@@ -36,6 +37,11 @@ targetEntityType: node
 bundle: article
 mode: teaser
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   field_article_categories:
     type: entity_reference_label
     label: hidden
@@ -94,6 +100,7 @@ hidden:
   field_season: true
   field_subject: true
   field_teaching_goals: true
+  field_time: true
   langcode: true
   layout_builder__layout: true
   links: true
