--- a/config/sync/core.entity_view_display.node.page.inline_navigation.yml
+++ b/config/sync/core.entity_view_display.node.page.inline_navigation.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.inline_navigation
     - field.field.node.page.body
     - field.field.node.page.field_description
+    - field.field.node.page.field_graphics
     - field.field.node.page.field_header
     - field.field.node.page.field_hide_breadcrumb
     - field.field.node.page.field_hide_title
@@ -53,6 +54,7 @@ content:
 hidden:
   body: true
   content_moderation_control: true
+  field_graphics: true
   field_header: true
   field_hide_breadcrumb: true
   field_hide_title: true
