--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -112,12 +112,14 @@ module:
   text: 0
   token: 0
   toolbar: 0
+  typed_data: 0
   update: 0
   user: 0
   view_unpublished: 0
   views_ui: 0
   webform: 0
   webp: 0
+  workbench_email: 0
   workflows: 0
   pathauto: 1
   content_translation: 10
