--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - media
+    - profile
     - search_api_page
     - system
 _core:
@@ -15,6 +16,6 @@ is_admin: false
 permissions:
   - 'access content'
   - 'search content'
-  - 'use text format restricted_html'
+  - 'view any organization profile'
   - 'view media'
   - 'view search api pages'
